force-app/main/default/objects/Leave_Balance_Line__c/Leave_Balance_Line__c.object-meta.xml
<CustomObject>
    <label>Leave Balance Line</label>
    <pluralLabel>Leave Balance Lines</pluralLabel>
    <nameField>
        <label>Balance Line Number</label>
        <type>AutoNumber</type>
        <displayFormat>LBL-{0000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>