force-app/main/default/objects/Leave_Balance_Line__c/fields/Adjusted__c.field-meta.xml
<CustomField>
    <fullName>Adjusted__c</fullName>
    <label>Adjusted</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>