force-app/main/default/objects/Leave_Balance_Line__c/fields/Available__c.field-meta.xml
<CustomField>
    <fullName>Available__c</fullName>
    <formula>Opening_Balance__c + Granted__c + Granted_By_Policy__c + Carried_Forward__c + Adjusted__c - Reserved__c - Used__c - Expired__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>