force-app/main/default/objects/Leave_Balance_Line__c/fields/Carried_Forward__c.field-meta.xml
<CustomField>
    <fullName>Carried_Forward__c</fullName>
    <label>Carried Forward</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>