force-app/main/default/objects/Leave_Balance_Line__c/fields/Expired__c.field-meta.xml
<CustomField>
    <fullName>Expired__c</fullName>
    <label>Expired</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>