force-app/main/default/objects/Leave_Balance_Line__c/fields/Granted__c.field-meta.xml
<CustomField>
    <fullName>Granted__c</fullName>
    <label>Granted</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>