force-app/main/default/objects/Leave_Balance_Line__c/fields/Granted_By_Policy__c.field-meta.xml
<CustomField>
    <fullName>Granted_By_Policy__c</fullName>
    <label>Granted By Policy</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>