force-app/main/default/objects/Leave_Balance_Line__c/fields/Leave_Balance__c.field-meta.xml
<CustomField>
    <fullName>Leave_Balance__c</fullName>
    <label>Leave Balance</label>
    <referenceTo>Leave_Balance__c</referenceTo>
    <relationshipLabel>Leave Balance Lines</relationshipLabel>
    <relationshipName>Leave_Balance_Lines</relationshipName>
    <type>MasterDetail</type>
</CustomField>