force-app/main/default/objects/Leave_Balance_Line__c/fields/Leave_Type_Definition__c.field-meta.xml
<CustomField>
    <fullName>Leave_Type_Definition__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Leave Type Definition</label>
    <referenceTo>Leave_Type_Definition__c</referenceTo>
    <relationshipLabel>Leave Balance Lines</relationshipLabel>
    <relationshipName>Leave_Balance_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>