force-app/main/default/objects/Leave_Balance_Line__c/fields/Opening_Balance__c.field-meta.xml
<CustomField>
    <fullName>Opening_Balance__c</fullName>
    <label>Opening Balance</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>