force-app/main/default/objects/Leave_Balance_Line__c/fields/Reserved__c.field-meta.xml
<CustomField>
    <fullName>Reserved__c</fullName>
    <label>Reserved</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>