force-app/main/default/objects/Leave_Balance_Line__c/fields/Used__c.field-meta.xml
<CustomField>
    <fullName>Used__c</fullName>
    <label>Used</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>